--- a/style.css
+++ b/style.css
@@ -12,9 +12,19 @@ html, body, .aside-wrap, main, section{
     height: 100%;
     /*text-align: center;*/
     }
+    /*SECTION*/
     section{
-        margin-left: 300px;
+        max-width: 900PX;
+        padding: 5% 0 0 300px;
     }
+        .section-title {
+            font-size: 56px;
+        }
+        .section-description{
+            font-size: 18px;
+            line-height: 1.3;
+            margin: 10px 0;
+        }
     html{
         scroll-behavior: smooth;
     }
@@ -46,6 +56,7 @@ body{
     font-family: ubuntu, sans-serif;
     font-size: 40px;
     }
+    /*ASIDE WRAP*/
     .aside-wrap{
     background-color: rgba(137, 145, 255, 0.034);
     background-image: linear-gradient(to bottom right,red, black);
@@ -66,3 +77,12 @@ body{
     .aside-wrap .menu-link:hover{
         border-bottom: 2px solid rgb(131, 226, 43);
     }
+    
+    /*SECTION HOME*/
+    #home .email-link{
+        text-transform: uppercase;
+        color: red;
+        text-decoration: none;
+    }
+    
+    
