--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ html, body, .aside-wrap, main, section{
     height: 100%;
     /*text-align: center;*/
     }
+    ul:not(.menu-list) {
+        padding: 0;
+    }
     /*SECTION*/
     section{
         max-width: 900PX;
@@ -40,17 +43,16 @@ body{
         line-height: 3;
             }*/
 .aside-wrap .menu-link{
-    color:rgba(0, 0, 0, 0.932);
+    color:rgba(238, 241, 237, 0.932);
     text-decoration: none;
     font-weight: bold;
     font-size: 15px;
     margin-right: 40px;
-    background-color: whitesmoke;
     border-radius:4px;
     padding: 5px;
     display: block;
     margin-top: 10px;
-    text-align: center;
+    text-align: left;
     }
 .name{
     font-family: ubuntu, sans-serif;
@@ -75,14 +77,27 @@ body{
      }
 
     .aside-wrap .menu-link:hover{
-        border-bottom: 2px solid rgb(131, 226, 43);
+        border-bottom: 2px solid;
     }
     
     /*SECTION HOME*/
-    #home .email-link{
+    #home .email-link {
         text-transform: uppercase;
         color: red;
         text-decoration: none;
     }
-    
-    
+    .social-links{
+        list-style: none;
+            }
+    .social-links li{
+        margin-right: 10px;
+        display: inline-block;
+        background-color: red;
+    }
+    .social-links li a {
+        padding: 10px;
+        color: burlywood;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 26px;
+    }
