--- a/style.css
+++ b/style.css
@@ -88,8 +88,10 @@ body{
     }
     .social-links li a {
         padding: 10px;
+        display: block;
         color: burlywood;
         font-weight: bold;
         text-decoration: none;
         font-size: 26px;
+        background-color: red;
     }
