--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
     margin: 0;
     box-sizing:border-box;/*considera todos os valores de padding e margin dos containers e blocos*/
 }
+:root{
+    --primary: #312c20;
+    --secondary: #494d4b;
+    --hover:#7c7052;
+    --dark:#17080C;
+}
+
 /*img{
     width: 200px;
     height: 200px;
@@ -53,7 +60,7 @@ body{
     /*ASIDE WRAP*/
     .aside-wrap{
     background-color: rgba(137, 145, 255, 0.034);
-    background-image: linear-gradient(to bottom right,red, black);
+    background-image: linear-gradient(to bottom right,var(--primary), black);
     width: 240px;
     padding: 100px 20px;
     position: fixed;    
@@ -75,7 +82,7 @@ body{
     /*SECTION HOME*/
     #home .email-link {
         text-transform: uppercase;
-        color: red;
+        color: var(--primary);
         text-decoration: none;
     }
     .social-links{
@@ -84,14 +91,14 @@ body{
     .social-links li{
         margin-right: 10px;
         display: inline-block;
-        background-color: red;
+        background-color: var(--secondary);
     }
     .social-links li a {
         padding: 10px;
         display: block;
-        color: burlywood;
+        color: #fff;
         font-weight: bold;
         text-decoration: none;
         font-size: 26px;
-        background-color: red;
+        background-color: var(--secondary);
     }
