--- a/style.css
+++ b/style.css
@@ -1,104 +1,155 @@
-*{
-    margin: 0;
-    box-sizing:border-box;/*considera todos os valores de padding e margin dos containers e blocos*/
-}
-:root{
-    --primary: #7c7052;
-    --secondary: #494d4b;
-    --hover:#312c20;
-    --dark:#17080C;
-}
 
-/*img{
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
-    margin-top: 10px;
-}*/
-html, body, .aside-wrap, main, section{
-    height: 100%;
-    /*text-align: center;*/
-    }
-    ul:not(.menu-list) {
-        padding: 0;
-    }
-    /*SECTION*/
-    section{
-        max-width: 900PX;
-        padding: 5% 0 0 300px;
-    }
-        .section-title {
-            font-size: 56px;
-        }
-        .section-description{
-            font-size: 18px;
-            line-height: 1.3;
-            margin: 10px 0;
-        }
-    html{
-        scroll-behavior: smooth;
-    }
-body{
-    background-color: rgba(149, 137, 255, 0.034);
+* {
+    margin: 0;
     font-family: sans-serif;
-   }
-.aside-wrap .menu-list{
+    box-sizing: border-box;
+  }
+  
+  :root {
+    --primary: #C94666;
+    --secondary: #78293d;
+    --hover: #5E2130;
+    --dark: #17080C;
+  }
+  
+  html, body, aside, main, section {
+    height: 100%;
+  }
+  
+  html {
+    scroll-behavior: smooth;
+  }
+  
+  ul:not(.menu-list) {
+    padding: 0;
+  }
+  
+  /* SECTIONS */
+  section {
+    max-width: 900px;
+    padding: 5% 0 0 300px;
+  }
+  
+  .section-title {
+    font-size: 56px;
+  }
+  
+  .section-description {
+    margin: 10px 0;
+    font-size: 18px;
+    line-height: 1.3;
+  }
+  
+  /* ASIDE WRAP */
+  .aside-wrap {
+    width: 240px;
+    background-image: linear-gradient(to bottom right, var(--primary), #000);
+    padding: 100px 20px;
+    position: fixed;
+  }
+  
+  .profile-img {
+    width: 250px;
+    height: 250px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.5);
+  }
+  
+  .aside-wrap .menu-list {
     list-style: none;
-    margin-top:10px;
-    }
-    .aside-wrap .menu-item{
-        line-height: 3;
-    }
-.aside-wrap .menu-link{
-    color:rgba(238, 241, 237, 0.932);
+    margin-top: 20px;
+  }
+  
+  .aside-wrap .menu-item {
+    line-height: 3;
+  }
+  
+  .aside-wrap .menu-link {
     text-decoration: none;
+    color: #fff;
     font-weight: bold;
     font-size: 18px;
+  }
+  
+  .aside-wrap .menu-link:hover {
+    border-bottom: 2px solid;
+  }
+  
+  /* SECTION HOME */
+  #home .email-link {
+    text-transform: uppercase;
+    color: var(--primary);
+    text-decoration: none;
+  }
+  
+  .social-links {
+    list-style: none;
+  }
+  
+  .social-links li {
+    display: inline-block;
+    background-color: var(--primary);
+    margin-right: 10px;
+  }
+  
+  .social-links li a {
+    padding: 10px;
     display: block;
-    text-align: left;
-    }
-    /*ASIDE WRAP*/
-    .aside-wrap{
-    background-color: rgba(137, 145, 255, 0.034);
-    background-image: linear-gradient(to bottom right,var(--primary), black);
-    width: 240px;
-    padding: 100px 20px;
-    position: fixed;    
+    color: #fff;
+    font-weight: bold;
+    font-size: 26px;
+    text-decoration: none;
+    background-color: var(--secondary);
+  }
+  .menu-label, #menu-check {
+    display: none;
+  }
+  @media (max-width: 600px) {
     
-     }
-
-     .profile-img{
-        width: 240px;/*largura*/
-        height: 240px;/*altura*/
-        border-radius: 5px;/*borda*/
-        box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .5);/*sombra imagem*/
-    
-     }
-
-    .aside-wrap .menu-link:hover{
-        border-bottom: 2px solid;
+    section {
+      padding: 10px;
     }
-    
-    /*SECTION HOME*/
-    #home .email-link {
-        text-transform: uppercase;
-        color: var(--primary);
-        text-decoration: none;
+  
+    .aside-wrap {
+      display: block;
+      width: 100%;
+      height: 250px;
+      padding: 0;
+      margin-top: -280px;
+      transition: all 1s;
     }
-    .social-links{
-        list-style: none;
-            }
-    .social-links li{
-        margin-right: 10px;
-        display: inline-block;
-        background-color: var(--secondary);
+  
+    .aside-wrap .menu-list {
+      padding: 10px;
     }
-    .social-links li a {
-        padding: 10px;
-        display: block;
-        color: #fff;
-        font-weight: bold;
-        text-decoration: none;
-        font-size: 26px;
-        background-color: var(--secondary);
+  
+    .aside-wrap .menu-item {
+      line-height: 2.5;
     }
+  
+    .profile-img {
+      display: none;
+    }
+  
+    .menu-label {
+      padding: 10px;
+      border: 1px solid;
+      display: block;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: #fff;
+      margin: 5px;
+      z-index: 1;
+      font-size: 20px;
+    }
+  
+    #menu-check {
+      display: none;
+    }
+  
+    #menu-check:checked + .aside-wrap {
+      margin: 0;
+    }
+  
+  }
